--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.0.8",
     "ganache-cli": "^6.12.2",
     "mocha": "^10.0.0",
     "solc": "^0.4.17",
